Part 4 Tasks 4.3-4.7 return

--- a/Part_4/blogilista-backend/package.json
+++ b/Part_4/blogilista-backend/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "eslint ."
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Joonas Pietilä",
   "license": "ISC",
@@ -15,11 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15"
   }
 }
